20160421
- Added support for name based search in stckstocklistbox.html 
-Locked creating product with duplicated EAN

20160420
- Added support for invoice cancel

20160419 and prev.
- Dark ages :)