@@ -1,7 +1,7 @@
 {include file="header.html"}
 {if !$layout.popup}<h1>{$layout.pagetitle}</h1>
 {else}
-{include file="modal.html"}
+{include file="stck/modal.html"}
 {/if}
 <P><FORM METHOD="POST" ACTION="?m=stckmanufactureradd{if $layout.popup}&popup=1{/if}" NAME="manufactureradd">
 <INPUT type="submit" class="hiddenbtn">
@@ -21,7 +21,7 @@
 	<TR CLASS="LIGHT">
 		<TD WIDTH="1%" CLASS="fleft" NOWRAP><IMG SRC="img/info1.gif" ALT=""> <B>{t}Comment:{/t}</B></TD>
 		<TD CLASS="fright">
-		  <TEXTAREA NAME="manufactureradd[comment]" COLS="60" ROWS="7" {tip text="Enter comment (optional)"}>{$manufactureradd.comment}</TEXTAREA>
+		  <TEXTAREA NAME="manufactureradd[comment]" COLS="{if !$layout.popup}60{else}30{/if}" ROWS="7" {tip text="Enter comment (optional)"}>{$manufactureradd.comment}</TEXTAREA>
 		</TD>
 	</TR>
 	<TR CLASS="LIGHT">
