@@ -4,6 +4,9 @@
 {include file="stck/modal.html"}
 {/if}
 <script type="text/javascript" src="/stock/js/jquery-1.7.1.min.js"></script>
+<script type="text/javascript" src="/stock/js/jquery.simplemodal.js"></script>
+<link href="/stock/js/jquery.simplemodal.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="/stock/js/common.js"></script>
 <P><FORM METHOD="POST" ACTION="?m=stckproductadd{if $layout.popup}&popup=1{/if}" NAME="productadd">
 <INPUT type="submit" class="hiddenbtn">
 <TABLE CLASS="lmsbox">
@@ -61,6 +64,7 @@
 					<OPTION VALUE="{$group.gid}"{if $group.gid == $productadd.groupid} selected{/if}>{$group.gname}</OPTION>
 				{/foreach}
 			</SELECT>
+			&nbsp;&nbsp;<A HREF="javascript:modalwindow('stckgroupadd', 400, 200);"><IMG src="img/add.gif" alt="[ {t}Add{/t} ]" title="[ {t}Add{/t} ]"></A>
 		</TD>
 	</TR>
 	<TR CLASS="LIGHT">
@@ -74,6 +78,7 @@
 					<OPTION VALUE="{$manufacturer.id}"{if $manufacturer.id == $productadd.maunfacturerid} selected{/if}>{$manufacturer.name}</OPTION>
 				{/foreach}
 			</SELECT>
+			&nbsp;&nbsp;<A HREF="javascript:modalwindow('stckmanufactureradd', 400, 200);"><IMG src="img/add.gif" alt="[ {t}Add{/t} ]" title="[ {t}Add{/t} ]"></A>
 		</TD>
 	</TR>
 	<TR CLASS="LIGHT">
